basic seite für gedanken erfassen

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,6 @@ quarkus.http.access-log.enabled=false
 quarkus.servlet.direct-buffers=true
 quarkus.live-reload.instrumentation=true
 
-quarkus.datasource.jdbc.url=jdbc:h2:mem:default
+quarkus.datasource.jdbc.url=jdbc:h2:file:E:/dev/tmp/data
 quarkus.datasource.db-kind=h2
 quarkus.hibernate-orm.database.generation=update
