--- a/pom.xml
+++ b/pom.xml
@@ -247,6 +247,12 @@
             <artifactId>commons-lang3</artifactId>
             <version>3.12.0</version>
         </dependency>
+		
+		<dependency>
+			<groupId>com.fasterxml.woodstox</groupId>
+			<artifactId>woodstox-core</artifactId>
+			<version>6.5.0</version>
+		</dependency>
 			
     </dependencies>
 
